kubernetes/apps/paperless-drali/paperless-gpt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gpt
  namespace: paperless-drali
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-gpt
  template:
    metadata:
      labels:
        app: paperless-gpt
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: paperless
              topologyKey: kubernetes.io/hostname
      containers:
        - name: paperless-gpt
          image: ghcr.io/icereed/paperless-gpt@sha256:c0ce6186028911101a2cfe68353f14a9dbb2653596f3f1cff94de4b6db3114ff
          volumeMounts:
            - name: prompts
              mountPath: /app/prompts/title_prompt.tmpl
              subPath: title_prompt.tmpl
            - name: prompts
              mountPath: /app/prompts/correspondent_prompt.tmpl
              subPath: correspondent_prompt.tmpl
            - name: prompts
              mountPath: /app/prompts/created_date_prompt.tmpl
              subPath: created_date_prompt.tmpl
            - name: prompts
              mountPath: /app/prompts/tag_prompt.tmpl
              subPath: tag_prompt.tmpl
            - name: prompts
              mountPath: /app/prompts/custom_field_prompt.tmpl
              subPath: custom_field_prompt.tmpl
          resources:
            requests:
              memory: 128Mi
              cpu: "50m"
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8080
      volumes:
        - name: prompts
          configMap:
            name: paperless-gpt-prompts
